# world-peace

./: .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  stack.yaml  world-peace.cabal
.github/workflows/: ci.yml
src/Data/: WorldPeace.hs
src/Data/WorldPeace/: Internal.hs  Product.hs  Union.hs
src/Data/WorldPeace/Internal/: Prism.hs
test/: Spec.hs
test/Test/: TypeErrors.hs
